[FIX] point_of_sale: long product name completely visible
Current behavior:
When a product had a too long name, the name was truncated and couldn't
be completely seen.

Steps to reproduce:
- Change the name of a product to a very long name with spaces
- Open the POS
- The product name is truncated

Note:
To fix this we stop showing placeholders when a product doesn't have an
image set.

opw-3245538

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -1194,6 +1194,10 @@ td {
     padding: 0 map-get($spacers, 2) map-get($spacers, 2);
 }
 
+.pos .product .product-name.no-image {
+    -webkit-line-clamp: 9;
+}
+
 .pos .product .product-info-button {
     position: absolute;
     top: 2px;
